# example-pipeline

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
src/example_pipeline/: __init__.py
tests/: test_version.py
